# LiveNAC

./: .gitignore  Cargo.toml  LICENSE  auth.html  config.toml  debug.md  writeup.md
config/: app_config.toml
src/: auth.rs  chat.rs  config.rs  eventsub.rs  lib.rs  main.rs  ui.rs
src/app/: config.rs  mod.rs  reducer.rs  state.rs
src/core/: auth.rs  chat.rs  eventsub.rs  success.html
src/emotes/: mod.rs  twitch_api.rs
src/events/: app_event.rs  mod.rs
src/features/: emotes.rs  mod.rs
src/models/: emote.rs  message.rs  mod.rs  user.rs
src/services/: mod.rs
src/ui/: app_layout.rs  chat_bar.rs  chat_log.rs  emote_picker.rs  mod.rs  profiles.rs  user_list.rs
src/ui/chat/: chat_bar.rs  chat_log.rs  emote_picker.rs  mod.rs  user_list.rs
src/utils/: mod.rs  text_processing.rs
