[package]
name = "livenac"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
eyre = "0.6.11"
figment = { version = "0.10.19", features = ["toml", "env"] }
fontdb = "0.23.0"
futures = "0.3.30"
http-body-util = "0.1"
hyper = { version = "1.4.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio", "http1"] }
parking_lot = "0.12.1"
rcgen = "0.14.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.24"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9.5"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twitch_api = { version = "0.7.2", features = ["helix", "reqwest", "eventsub"] }
twitch_oauth2 = { version = "0.15.2", features = ["reqwest"] }
twitch_types = "0.4.8"
url = "2.5.0"
webbrowser = "0.8.12"
